# mospi-unitdata

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PKG-INFO  README.md  pyproject.toml  setup.py
MospiMicrodata/: MospiMicrodata.py  __init__.py
MospiUnitdata/: MospiUnitdata.py  __init__.py
tests/: demo.ipynb  test.ipynb
