[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mospi-unitdata"
version = "0.1.0"
description = "Python client for downloading data from the MoSPI Microdata Portal (https://microdata.gov.in)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "DIID, Ministry of Statistics and Programme Implementation" },
    { name = "Neeraj Prakash" },
    { name = "Satvik Bajpai" },
    { name = "Sarthak Srivastava" },
]
keywords = ["microdata", "mospi", "nso", "nsoindia", "india", "statistics", "government", "data", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://microdata.gov.in"
Repository = "https://github.com/nso-india/mospi-unitdata"
Issues = "https://github.com/nso-india/mospi-unitdata/issues"

[tool.hatch.build.targets.wheel]
packages = ["MospiUnitdata"]

[tool.hatch.build.targets.sdist]
include = ["MospiUnitdata/**"]
